# oscomp-kernel-training-npucore

./: .gitignore  2022_09_27_22_56_24.txt  2022_09_27_23_18_18.txt  2022_09_27_23_45_21.txt  2022_09_29_13_37_44.txt  2022_09_29_23_59_13.txt  2022_09_30_00_33_30.txt  2022_10_01_14_00_05.txt  Makefile  README.md
.github/workflows/: classroom.yml
Doc/: NPUCore.md
Doc/debug/: API.md  Virt-IO驱动bug.md  rustsbi不对齐读.md  初期文档.md  技术细节与错误文档.md
Doc/fs/: Linux下的短目录名生成.md  fat.md  fat.org
Doc/os/: signal.md
easy-fs-fuse/: .gitignore  fat32.img
easy-fs-fuse/src/: main.rs
easy-fs/benches/: bench.rs
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  dir_iter.rs  efs.rs  fat.org  layout.rs  lib.rs  vfs.rs
fat32-fuse/: .gitignore
os/: Cargo.toml  Makefile  buildfs.sh  clear_doc.sh
os/src/: config.rs  console.rs  main.rs  monitor.rs  timer.rs
os/src/boards/: fu740.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
os/src/drivers/serial/: ns16550a.rs
os/src/fs/: cache.rs  cache_mgr.rs  directory_tree.rs  file_trait.rs  filesystem.rs  finfo.rs  inode.rs  iovec.rs  layout.rs  mod.rs  mount.rs  pipe.rs  poll.rs  stdio.rs  swap.rs
os/src/fs/dev/: hwclock.rs  mod.rs  null.rs  pipe.rs  pseudo.rs  socket.rs  tty.rs  zero.rs
os/src/fs/dev_fs/: dev_tree.rs  ioctl.rs  mod.rs  null_zero.rs  tty.rs
os/src/fs/fat32/: bitmap.rs  efs.rs  inode.rs  vfs.rs
os/src/fs/fs/: cache_mgr.rs  inode.rs  mod.rs
os/src/mm/: address.rs  block_cache_block.rs  block_cache_page.rs  elf_cache.rs  frame_allocator.rs  memory_set.rs  mm_const.rs  mod.rs  page_table.rs  zram.rs
os/src/syscall/: errno.rs  fs.rs  mmap.rs  mod.rs  process.rs  socket.rs
os/src/task/: elf.rs  manager.rs  mod.rs  pid.rs  processor.rs  signal.rs  task.rs  threads.rs
os/src/trap/: active_event.rs  context.rs  mod.rs  trap.S
rustsbi-k210/.cargo/: config.toml
rustsbi-k210/src/: execute.rs  feature.rs  hart_csr_utils.rs  main.rs  peripheral.rs  runtime.rs
simple_fat32/src/: block_cache.rs  (+2 more)
user/: .gitignore  Cargo.toml  Makefile
(+254 files in other folders)
